[package]
name = "tatami-dungeon"
version = "0.1.7"
edition = "2021"
license = "MIT"
authors = ["giraffekey <giraffekey@tutanota.com>"]
description = "A roguelike dungeon generation algorithm"
repository = "https://github.com/giraffekey/tatami"
readme = "README.md"
categories = ["game-development", "visualization"]
keywords = ["gamedev", "roguelike", "dungeon", "generation", "algorithm"]
exclude = ["images", "nodejs"]

[dependencies]
image = "0.25"
itertools = "0.13"
noise = "0.9"
num-integer = "0.1"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
